Timezones + improved holidays control

--- a/app/src/main/res/menu/menu_bottom_navigation.xml
+++ b/app/src/main/res/menu/menu_bottom_navigation.xml
@@ -16,11 +16,19 @@
         app:showAsAction="ifRoom" />
 
     <item
+        android:id="@+id/action_flash"
+        android:enabled="true"
+        android:icon="@drawable/ic_spotlight"
+        android:title="@string/flash"
+        app:showAsAction="ifRoom" />
+
+    <item
         android:id="@+id/action_holidays"
         android:enabled="true"
         android:icon="@drawable/ic_calendar_edit"
         android:title="@string/holidays"
         app:showAsAction="ifRoom" />
+
 
     <item
         android:id="@+id/action_settings"
